--- a/newifi3.config
+++ b/newifi3.config
@@ -142,7 +142,7 @@ CONFIG_PACKAGE_AdGuardHome=n
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 #CONFIG_PACKAGE_luci-app-ssrserver-python=y
-#CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #  CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray=y
 # CONFIG_PACKAGE_luci-app-v2ray-server_INCLUDE_v2ray-plugin=y
 
@@ -150,15 +150,16 @@ CONFIG_PACKAGE_AdGuardHome=n
 # ShadowsocksR插件:
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_xray-plugin=n
+#CONFIG_PACKAGE_xray-plugin=n
 
 # Passwall插件:
 CONFIG_PACKAGE_luci-app-passwall=n
@@ -167,7 +168,7 @@ CONFIG_PACKAGE_luci-app-passwall=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=y
@@ -181,8 +182,8 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
 #  CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 
