--- a/newifi3test.config
+++ b/newifi3test.config
@@ -142,7 +142,7 @@ CONFIG_PACKAGE_AdGuardHome=n
 #CONFIG_PACKAGE_luci-app-openvpn-server=y #openvpn服务
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 #CONFIG_PACKAGE_luci-app-ssrserver-python=y
-#CONFIG_PACKAGE_luci-app-xray=y #xray服务器
+CONFIG_PACKAGE_luci-app-v2ray-server=y #V2ray服务器
 #CONFIG_PACKAGE_Xray=y
 #CONFIG_PACKAGE_v2ray=y
 
